k8s/admin-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
        - name: admin-server
          image: npt1601/admin-server:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: admin-server
spec:
  type: NodePort
  selector:
    app: admin-server
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
