k8s/config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: npt1601/config-server:latest
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  type: NodePort
  selector:
    app: config-server
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30088
