k8s/customers-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
        - name: customers-service
          image: npt1601/customers-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
spec:
  type: NodePort
  selector:
    app: customers-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30003
