k8s/discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: npt1601/discovery-server:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
spec:
  type: NodePort
  selector:
    app: discovery-server
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30004
