k8s/genai-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genai-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genai-service
  template:
    metadata:
      labels:
        app: genai-service
    spec:
      containers:
        - name: genai-service
          image: npt1601/genai-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: genai-service
spec:
  type: NodePort
  selector:
    app: genai-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30005
