k8s/tracing-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracing-server
  template:
    metadata:
      labels:
        app: tracing-server
    spec:
      containers:
        - name: tracing-server
          image: npt1601/tracing-server:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tracing-server
spec:
  type: NodePort
  selector:
    app: tracing-server
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30006
