k8s/vets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
        - name: vets-service
          image: npt1601/spring-petclinic-vets-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
spec:
  selector:
    app: vets-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
