k8s/vets-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
        - name: vets-service
          image: npt1601/vets-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
spec:
  type: NodePort
  selector:
    app: vets-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30007
