k8s/visits-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      containers:
        - name: visits-service
          image: npt1601/visits-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: visits-service
spec:
  type: NodePort
  selector:
    app: visits-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30008
