k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Possibly remove rewrite-target if you don't actually need it
spec:
  rules:
    - host: discovery.local
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: discovery-server
                port:
                  number: 8761
